--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,8 @@
         "arrow-parens": "off",
         "indent": "off",
         "comma-dangle": "off",
-        "require-jsdoc": "off"
+        "require-jsdoc": "off",
+        "operator-linebreak":"off"
     },
     "extends": ["eslint:recommended", "google"]
 }
