--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,8 @@
         "eslint-disable-next-line": "off",
         "object-curly-spacing": "off",
         "max-len": "off",
-        "space-before-function-paren": "off"
+        "space-before-function-paren": "off",
+        "no-unused-vars": "off"
     },
     "extends": [
         "eslint:recommended",
